--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,17 @@
   "version": "1.0.0",
   "manifest_version": 1,
   "description": "Hoja de personaje flexible para D&D 5.5 y contenido Homebrew.",
-  "icon": "https://tu-servidor.com/icon.png",
   "background_color": "#1a1a1a",
   "action": {
     "title": "Abrir Hoja",
-    "icon": "https://tu-servidor.com/icon.png",
-    "popover": "index.html",
+    "view": "/index.html",
+    "location": "TOOL",
     "width": 400,
     "height": 600
   },
   "permissions": [
-    "SCENE_ITEMS_READ",
-    "SCENE_ITEMS_WRITE",
-    "PLAYER_READ"
+    { "name": "SCENE_ITEMS_READ" },
+    { "name": "SCENE_ITEMS_WRITE" },
+    { "name": "PLAYER_READ" }
   ]
 }
