--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,9 @@
   "action": {
     "title": "Abrir Hoja",
     "view": "/index.html",
+    "icon": "https://www.owlbear.rodeo/favicon-32x32.png",
     "location": "TOOL",
     "width": 400,
     "height": 600
   }
 }
-
