--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Hoja de Personaje D&D",
+  "name": "Hoja de Personaje SRD",
   "version": "1.0.0",
   "manifest_version": 1,
-  "description": "Hoja de personaje para D&D",
+  "description": "Hoja de personaje para D&D 5e.",
   "icon": "https://img.icons8.com/ios-filled/50/ffffff/dungeons-and-dragons.png",
-  "author": "ATREYU"
+  "background_url": "./index.html"
 }
